log
Thu Apr  7 23:23:34 UTC 2022: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:28: error: expected expression before ‘=’ token
   while(map->buckets[aux]!==NULL){
                            ^
hashmap.c:45:20: error: ‘HashMap {aka struct HashMap}’ has no member named ‘key’
     if(is_equal(map->key,key)){
                    ^~
hashmap.c:49:18: error: implicit declaration of function ‘cretePeir’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
       Pair* dato=cretePeir(kay,value);
                  ^~~~~~~~~
                  createPair
hashmap.c:49:28: error: ‘kay’ undeclared (first use in this function); did you mean ‘key’?
       Pair* dato=cretePeir(kay,value);
                            ^~~
                            key
hashmap.c:49:28: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:50:20: error: ‘i’ undeclared (first use in this function)
       map->buckets[i]=dato;
                    ^
cc1: all warnings being treated as errors
Compilation failed
67fd0cf
Thu Apr  7 23:24:04 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:20: error: ‘HashMap {aka struct HashMap}’ has no member named ‘key’
     if(is_equal(map->key,key)){
                    ^~
hashmap.c:49:18: error: implicit declaration of function ‘craetePeir’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
       Pair* dato=craetePeir(key,value);
                  ^~~~~~~~~~
                  createPair
hashmap.c:49:18: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
b4ab5b8
Thu Apr  7 23:24:46 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:18: error: implicit declaration of function ‘createPeir’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
       Pair* dato=createPeir(key,value);
                  ^~~~~~~~~~
                  createPair
hashmap.c:49:18: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
90ea976
Thu Apr  7 23:25:33 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
611f5a4
